# book-python

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yaml  CNAME  LICENSE  LICENSE.rst  Makefile  PROGRESS.rst  README.rst  TODO.rst  __notepad__.py  __version__.py  _temporary.py  _tmp.py  about.rst  agenda.rst  bibliography.bib  bibtex.json  codecov.yml  conf.py  devfile.yaml  index.rst  install.rst  make.py  nwo.py  nwo.rst  pyproject.toml  requirements-book.txt  requirements-readthedocs.txt  requirements-workshop.txt  requirements.txt  roche.py  roche.rst  run.py  setup.cfg  setup.py  survey.rst
.circleci/: config.yml
.fleet/: settings.json
.run/: Build Advanced.run.xml  Build Basic.run.xml  Build Design Patterns.run.xml  Build DevSecOps.run.xml  Build Django.run.xml  Build FastAPI.run.xml  Build Machine Learninig.run.xml  Build Matplotlib.run.xml  Build Numerical Analysis.run.xml  Build Numpy.run.xml  Build Pandas.run.xml  Build PyBook.run.xml  Build Quality.run.xml  Build Stdlib.run.xml
__TODO/: overload.rst
_appendix/: further-reading.rst  hyperlinks.rst
_bin/: _config.py  assignments.py  checklinks.sh  encoding-table.py  git.py  make-assignments.py  make-doctests.py  make-glossary.py  make-notes.py  ml-classifier.py  ml-classifiers-own.py  ml-cluster-iris.py  ml-knn-gender.csv  ml-linear-regression.py  ml-pca-pima.py  ml-pima-diabetes-validation.py  ml-pima-diabetes.py  podstawy-calkowite.py  podstawy-celsiusz-na-kelvin.py  podstawy-dzienniczek-ucznia.py  podstawy-konwersja-liczby-na-slowny.py  podstawy-ksiazka_adresowa_dict.py  podstawy-ksiazka_adresowa_klasy.py  podstawy-punkty-losowe-klasy.py  sredniozaawansowany-ksiazka-adresowa-obiektowo.py  sredniozaawansowany-ksiazka-adresowa.py  zaawansowany-botnet-attacker-execute-client.py  zaawansowany-botnet-victim.py  zaawansowany-etc-passwd.py  zaawansowany-process-client.py  zaawansowany-process-listener.py
_blogpost/: ml-introduction.rst
_book/: conf.py
_contrib/: 1_lr.ipynb  2020-bootcamp-matplotlib.ipynb  2020-bootcamp-pandas.ipynb  2020-bootcamp-zjazd2-dzien2.ipynb  2020-bootcamp-zjazd3-numpy.ipynb  4_unsupervised.ipynb  data-preprocessing-simple-viz-model-fitting.ipynb  eda-nasa-astronauts-in-pandas.ipynb  exploratory-nasa-astronauts-1959-present.ipynb  function_args_g.py  function_doctest_c.py  function_recurrence_b.py  function_scope_b.py  function_scope_c.py  scratch.py  space-missions-eda-time-series-anaysis.ipynb  spacex-missions-over-time.ipynb  starter-astronaut-database-19e33e40-7.ipynb  starter-r-spacex-data-28adc86f-0.ipynb  zjazd4-dzien1-csv-xslx.ipynb  zjazd4-dzien1-json.ipynb  zjazd4-dzien2-html.ipynb  zjazd4-dzien2-sql.ipynb  zjazd4-dzien2-xml.ipynb
_data/: astro-experience.csv  astronauts.csv  eva.csv  quandl-data.txt
_exam/: exam-basic.ipynb
_i18n/: custom.dic  en_US.dic
_references/: bibliography.bib  images.bib  references.rst  video.bib
_static/: copybutton.js  dark.css  onload.js  screen.css
_tests/: index.py
_theme/: astromatt-theme  astromatt-theme.icls
_tmp/: __notepad__.py  botnet-commands.xml  etc-passwd.txt  fixtures-new.json  iris-data-set.txt  tmp6.py
about/: books.rst  conf.py  donation-failed.rst  donation-success.rst  further-reading.rst  history.rst  ide.rst  index.rst  install.rst  language.rst  progress.rst  python-2vs3.rst  references.rst  requirements.txt  syntax.rst  versions.rst  video.rst  workshop-advanced.rst  (+7 more)
(+6797 files in other folders)
