[build-system]
requires = [
    "setuptools>=51.0.0",
    "wheel",
    "sphinx>=5.0"
]

[tool.black]
target-version = ['py310']
preview = true
line-length = 88
skip-string-normalization = true
multi-line-output = 3
exclude = '''(
  __TODO
  | _bin
  | _blogpost
  | _contrib
  | _data
  | _i18n
  | _static
  | _theme
  | _tmp
  | \.egg
  | \.git
  | \.mypy_cache
  | \.venv
  | _build
  | .github
  | .run
  | build
  | dist
  | setup.py
)'''

[tool.isort]
profile = "black"
src_paths = ["requests", "test"]
known_third_party = ["fastapi", "pydantic", "starlette"]
honor_noqa = true
combine_as_imports = true
force_grid_wrap = 2
force_sort_within_sections = true


[tool.mypy]
# Import discovery
files = ["src"]
namespace_packages = false
explicit_package_bases = false
ignore_missing_imports = false
follow_imports = "normal"
follow_imports_for_stubs = false
no_site_packages = false
no_silence_site_packages = false
# Platform configuration
python_version = "3.10"
platform = "linux-64"
# Disallow dynamic typing
disallow_any_unimported = false # TODO
disallow_any_expr = false # TODO
disallow_any_decorated = false # TODO
disallow_any_explicit = false # TODO
disallow_any_generics = true
disallow_subclassing_any = true
# Untyped definitions and calls
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
# None and Optional handling
no_implicit_optional = true
strict_optional = true
# Configuring warnings
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = false # GH#27396
# Suppressing errors
show_none_errors = true
ignore_errors = false
enable_error_code = "ignore-without-code"
# Miscellaneous strictness flags
allow_untyped_globals = false
allow_redefinition = false
local_partial_types = false
implicit_reexport = true
strict_equality = true
# Configuring error messages
show_error_context = false
show_column_numbers = false
show_error_codes = true

[tool.pytest.ini_options]
minversion = "6.2"
xfail_strict = true
junit_family = "xunit2"
addopts = [
  "--doctest-modules",
  "--strict-config",
  "--strict-markers"]
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"
testpaths = [
    "about",
    "advanced",
    "basics",
    "data-science",
    "database",
    "design-patterns",
    "devops",
    "django",
    "dragon",
    "fastapi",
    "gui",
    "http",
    "install",
    "intermediate",
    "machine-learning",
    "matplotlib",
    "network",
    "numpy",
    "oop",
    "pandas",
    "stdlib",
]


[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
include = ["*"]
exclude = ["_*"]
# enable subset of "strict"
reportDuplicateImport = true
reportInvalidStubStatement = true
reportOverlappingOverload = true
reportPropertyTypeMismatch = true
reportUntypedClassDecorator = true
reportUntypedFunctionDecorator = true
reportUntypedNamedTuple = true
# disable subset of "basic"
reportGeneralTypeIssues = false
reportMissingModuleSource = false
reportOptionalCall = false
reportOptionalIterable = false
reportOptionalMemberAccess = false
reportOptionalOperand = false
reportOptionalSubscript = false
reportPrivateImportUsage = false
reportUnboundVariable = false
reportUnsupportedDunderAll = false
